added more required function

--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,15 @@
 body {
   background-color: #adff2f;
 }
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
+}
+.box {
+  width: auto;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
