--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,9 @@
   font-size: 30px;
 }
 body {
-  background-color: #adff2f;
+  background: #c31432;
+  background: -webkit-linear-gradient(to right, #240b36, #c31432);
+  background: linear-gradient(to right, #240b36, #c31432);
 }
 .grid {
   display: grid;
